k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labs-slack-integration-master
