k8s/master.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labs-slack-integration-master
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: labs-slack-integration
    role: backend
    version: master
  name: labs-slack-integration
  namespace: labs-slack-integration-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labs-slack-integration
      role: backend
      version: master
  template:
    metadata:
      labels:
        app: labs-slack-integration
        role: backend
        version: master
      name: labs-slack-integration
    spec:
      containers:
      - args:
        - apachectl
        - -D
        - FOREGROUND
        image: eu.gcr.io/ptcs-docker-registry/labs-slack-integration:latest-master
        imagePullPolicy: Always
        name: labs-slack-integration
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: labs-slack-integration
    role: backend
    version: master
  name: labs-slack-integration
  namespace: labs-slack-integration-master
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: labs-slack-integration
    role: backend
    version: master
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labs-slack-integration-master-ingress
  namespace: labs-slack-integration-master
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    traefik-type: public
spec:
  rules:
    - host: labs-slack-integration-master.protacon.cloud
      http:
        paths:
          - backend:
              serviceName: labs-slack-integration
              servicePort: 80
    - host: labs-slack-integration-master.protacon.cloud
